--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -11,8 +11,11 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: "DM Sans", system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial;
+  --font-signiture: "Allura", cursive;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono",
+    "Courier New", monospace;
 
   --color-accent: var(--accent);
   --color-accent-secondary: var(--accent-secondary);
@@ -44,17 +47,32 @@
   }
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: "DM sans", sans-serif;
+  font-family: var(--font-sans);
+}
+
+.lang-fa {
+  direction: ltr;
+}
+.lang-fa .rtltxt {
+  direction: rtl;
+  unicode-bidi: embed;
+}
+.lang-fa .rtltxt .text-left {
+  text-align: right;
+}
+.lang-fa .rtltxt .text-right {
+  text-align: left;
+}
+.lang-fa .rtltxt .pl-4 {
+  padding-left: 0 !important;
+  padding-right: 1rem !important;
+}
+.lang-fa .rtltxt .pr-4 {
+  padding-right: 0 !important;
+  padding-left: 1rem !important;
 }
 
 .js-loading h1,
